# fabric

./: Cargo.toml  README.md  WEBOTS_SIM_PROMPT.md  try.ps1
crates/fabric-ast/: Cargo.toml
crates/fabric-ast/src/: lib.rs
crates/fabric-checker/: Cargo.toml
crates/fabric-checker/src/: lib.rs
crates/fabric-cli/: Cargo.toml
crates/fabric-cli/src/: main.rs
crates/fabric-cli/tests/: integration.rs
crates/fabric-codegen/: Cargo.toml
crates/fabric-codegen/src/: lib.rs
crates/fabric-core/: Cargo.toml
crates/fabric-core/src/: lib.rs
crates/fabric-lexer/: Cargo.toml
crates/fabric-lexer/src/: lib.rs
crates/fabric-parser/: Cargo.toml
crates/fabric-parser/src/: lib.rs
crates/fabric-types/: Cargo.toml
crates/fabric-types/src/: lib.rs
examples/: drone.c  drone.fab  drone.py  simple.fab  stabilize.c  stabilize.fab  stabilize.py  test_fn.fab
