[package]
name = "fabric-ast"
version = "1.0.0"
edition = "2021"
description = "AST definitions for the Fabric robotics DSL"
license = "MIT"
repository = "https://github.com/subhansh-dev/fabric"
keywords = ["robotics", "dsl", "ast", "real-time", "safety-critical"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[dependencies]
fabric-core = { path = "../fabric-core" }
