[package]
name = "fabric-checker"
version = "1.0.0"
edition = "2021"
description = "Safety checker: fallback graph analysis, IPET timing (ILP), refinement types"
license = "MIT"
repository = "https://github.com/subhansh-dev/fabric"
keywords = ["robotics", "wcet", "ipet", "real-time", "safety-critical"]
categories = ["development-tools", "algorithms"]
readme = "../../README.md"

[dependencies]
fabric-core = { path = "../fabric-core" }
fabric-ast = { path = "../fabric-ast" }
fabric-types = { path = "../fabric-types" }
good_lp = { version = "1", default-features = false, features = ["microlp"] }

[features]
default = []
