[package]
name = "fabric-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fabric"
path = "src/main.rs"

[dependencies]
fabric-core = { path = "../fabric-core" }
fabric-ast = { path = "../fabric-ast" }
fabric-lexer = { path = "../fabric-lexer" }
fabric-parser = { path = "../fabric-parser" }
fabric-types = { path = "../fabric-types" }
fabric-checker = { path = "../fabric-checker" }
fabric-codegen = { path = "../fabric-codegen" }
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
