[package]
name = "fabric-lang"
version = "1.0.0"
edition = "2021"
description = "CLI compiler for the Fabric robotics DSL — safety-checked real-time drone/robot code"
license = "MIT"
repository = "https://github.com/subhansh-dev/fabric"
keywords = ["robotics", "dsl", "compiler", "cli", "real-time"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"

[[bin]]
name = "fabric-lang"
path = "src/main.rs"

[dependencies]
fabric-core = { path = "../fabric-core" }
fabric-ast = { path = "../fabric-ast" }
fabric-lexer = { path = "../fabric-lexer" }
fabric-parser = { path = "../fabric-parser" }
fabric-types = { path = "../fabric-types" }
fabric-checker = { path = "../fabric-checker" }
fabric-codegen = { path = "../fabric-codegen" }
clap = { version = "4", features = ["derive"] }
ariadne = "0.4"
