[package]
name = "fabric-codegen"
version = "1.0.0"
edition = "2021"
description = "Code generation backends (Python/Webots, C/ARM) for the Fabric robotics DSL"
license = "MIT"
repository = "https://github.com/subhansh-dev/fabric"
keywords = ["robotics", "code-generation", "webots", "embedded", "arm"]
categories = ["development-tools", "compilers"]
readme = "../../README.md"

[dependencies]
fabric-core = { path = "../fabric-core" }
fabric-ast = { path = "../fabric-ast" }
fabric-types = { path = "../fabric-types" }
