[package]
name = "fabric-core"
version = "1.0.0"
edition = "2021"
description = "Shared types, spans, and error handling for the Fabric robotics DSL"
license = "MIT"
repository = "https://github.com/subhansh-dev/fabric"
keywords = ["robotics", "dsl", "real-time", "safety-critical", "wcet"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[dependencies]
ariadne = "0.4"
