[package]
name = "fabric-lexer"
version = "1.0.0"
edition = "2021"
description = "Logos-based tokenizer for the Fabric robotics DSL"
license = "MIT"
repository = "https://github.com/subhansh-dev/fabric"
keywords = ["robotics", "dsl", "lexer", "tokenizer", "logos"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[dependencies]
fabric-core = { path = "../fabric-core" }
logos = "0.14"
