[package]
name = "fabric-parser"
version = "1.0.0"
edition = "2021"
description = "Hand-rolled Pratt parser for the Fabric robotics DSL"
license = "MIT"
repository = "https://github.com/subhansh-dev/fabric"
keywords = ["robotics", "dsl", "parser", "pratt", "recursive-descent"]
categories = ["development-tools", "parser-implementations"]
readme = "../../README.md"

[dependencies]
fabric-core = { path = "../fabric-core" }
fabric-ast = { path = "../fabric-ast" }
fabric-lexer = { path = "../fabric-lexer" }
ariadne = "0.4"
